commit tree 86345d20163e922d7136b4101ec5e07b793bb39a

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   hello
+  let multiply
+  multiply = 31 * 2;
   <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
+
